--- a/composer.json
+++ b/composer.json
@@ -10,20 +10,23 @@
     "require": {
         "php": "^7.2.5|^8.0",
         "barryvdh/laravel-dompdf": "^1.0",
-        "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
-        "laravel/framework": "^7.29",
+        "guzzlehttp/guzzle": "^7.0.1",
+        "laravel/framework": "^9",
+        "laravel/legacy-factories": "*",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^2.4",
+        "laravel/ui": "^3.0",
+        "league/flysystem-aws-s3-v3": "3.0",
+        "league/flysystem-ftp": "3.0",
+        "league/flysystem-sftp-v3": "3.0",
         "yoeunes/toastr": "^1.2"
     },
     "require-dev": {
-        "facade/ignition": "^2.0",
+        "spatie/laravel-ignition": "^1.0",
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^4.3",
-        "phpunit/phpunit": "^8.5.8|^9.3.3"
+        "nunomaduro/collision": "^6.1",
+        "phpunit/phpunit": "^9.0"
     },
     "config": {
         "optimize-autoloader": true,
@@ -37,12 +40,10 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
-        },
-        "classmap": [
-            "database/seeds",
-            "database/factories"
-        ]
+            "App\\": "app/",
+            "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/"
+        }
     },
     "autoload-dev": {
         "psr-4": {
